--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color	name="titulo">#015488</color>
+    <color	name="categoria_alimentacao">#9FC5F8</color>
+    <color	name="categoria_hospedagem">#6FA8DC</color>
+    <color	name="categoria_transporte">#0099CC</color>
+    <color	name="categoria_outros">#ACBFD5</color>
 </resources>
