--- a/app/src/main/res/layout/gasto.xml
+++ b/app/src/main/res/layout/gasto.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,14 +13,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/novo_gasto"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textStyle="bold">
-            </TextView>
 
             <TextView
                 android:id="@+id/destino"
