--- a/app/src/main/res/layout/lista_gastos.xml
+++ b/app/src/main/res/layout/lista_gastos.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/titulo">
+    android:background="@color/titulo"
+    android:fitsSystemWindows="true">
 
 
     <TextView
