--- a/app/src/main/res/layout/viagem.xml
+++ b/app/src/main/res/layout/viagem.xml
@@ -2,7 +2,8 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,14 +14,7 @@
 
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/nova_viagem"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textStyle="bold">
-        </TextView>
+
 
     </LinearLayout>
 
