implementando configurações e teminando menu viagem

--- a/app/src/main/res/layout/lista_viagem.xml
+++ b/app/src/main/res/layout/lista_viagem.xml
@@ -45,6 +45,13 @@
             android:layout_height="wrap_content">
         </TextView>
 
+        <ProgressBar
+            android:id="@+id/barraProgresso"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal">
+        </ProgressBar>
+
     </LinearLayout>
 
 </LinearLayout>
