--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -43,6 +43,13 @@
         android:inputType="textPassword">
     </EditText>
 
+    <CheckBox
+        android:id="@+id/manterConectado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/manter_conectado">
+    </CheckBox>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
