--- a/app/src/main/res/layout-large-land/anotacoes.xml
+++ b/app/src/main/res/layout-large-land/anotacoes.xml
@@ -1,20 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:gravity="center"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
 
-    <FrameLayout
+    <fragment
         android:id="@+id/fragment_viagens"
+        android:name="com.example.boaviagem.fragment.ViagemListFragment"
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
-    <FrameLayout
+    <fragment
         android:id="@+id/fragment_anotacoes"
+        android:name="com.example.boaviagem.fragment.AnotacoesListFragment"
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
+    <fragment
+        android:id="@+id/fragment_anotacao"
+        android:name="com.example.boaviagem.fragment.Anotacaofragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
 </LinearLayout>
